assets/css/style.scss
---
---

@import "{{ site.theme }}";

html {
	scroll-behavior: smooth;
}

section h1,h2,h3 {
	scroll-margin-top: 65px;
}

header {
  background: url(../images/grondtoon-header.jpg);
  background-size: 106500px 42413px;
  animation: move-bg 3000s linear infinite;
  image-rendering: pixelated;
  border-bottom: 5px solid #fc0;
  position: sticky;
  top: -85px;
  padding: 0;
}

@keyframes move-bg {
  from {
    background-position: 0% 0%;
  }
  to {
    background-position: 100% 0%;
  }
}

header h1 {
  color: #e8e4cf;
  text-shadow: 0px 2px 0px #152c1c;
  padding-top: 15px;
  pointer-events: none;
}

header p {
  color: #e8e4cf;
  text-shadow: 0px 1px 0px #152c1c;
  font-size: 17px;
  margin-top: 2px;
  margin-bottom: 5px;
  pointer-events: none;
}

#menu {
  margin-bottom: 5px;
}

.menu {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.menu li a {
  padding: 5px;
  background: #fc0;
  border-radius: 5px;
  margin: 2px;
  color: black;
  white-space: nowrap;
  display: block;
}

.menu li.active a {
  background: #f0b500;
}

.menu li a:hover {
  background: #fed326;
}

#dropdown-menu {
  transform: scaleY(0);
  transform-origin: top center;
  transition: transform 0.5s;
  position: absolute;
  width: 100%;
  left: 0;
  align-content: flex-start;
  background: #fc0;
  padding: 10px 0;
  box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.75);
}

body.drop #dropdown-menu {
  transform: scaleY(1);
}

#dropdown-menu > * {
  opacity: 0;
  transition-property: opacity;
  transition-timing-function: ease;
  transition-duration: 250ms; /* default = collapse (out) */
}

/* when opening: set longer duration */
body.drop #dropdown-menu > * {
  opacity: 1;
  transition-duration: 1s; /* used for the transition to this state */
}

strong {
  color: #f0b500;
}

// iframe {
//     min-width: 100px;
//     width: 100%;
// }

section {
  margin-top: 25px;
}

section img, section {
  border-radius: 8px;
}

@media print, screen and (max-width: 1060px) {
  section {
    // margin-top: 175px;
    padding: 30px 30px 50px 30px;
  }
}

@media print, screen and (max-width: 720px) {
  
  header h1 {
    font-size: 40px;
  }

  header p {
    display: block;
    font-size: 17px;
  }

  section {
    padding: 15px 15px 25px 15px;
  }
}

nav {
  position: absolute;
  top: 195px;
}

@media print, screen and (max-height: 480px) {
  nav {
    display: block;
  }
}

@media print, screen and (max-width: 480px) {
  header ul {
    display: unset;
  }
}

